--- a/Task1/S1.html
+++ b/Task1/S1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>CSS</title>
-        <link rel="stylesheet" href="C:\Users\aya20\OneDrive\سطح المكتب\NTI web Design\css\s1.css">
+        <link rel="stylesheet" href="C:\Users\aya20\OneDrive\سطح المكتب\NTIwebdesign\Task1\css\s1.css">
     </head>
     <body>
         <div class="Cent">
